--- a/personal-website/src/assets/stylesheets/projects.scss
+++ b/personal-website/src/assets/stylesheets/projects.scss
@@ -55,7 +55,17 @@
 
 
 .animationHoverDiv {
-    background-color: rgb(0,0,0);
+    background-color: rgba(0, 0, 0, 0.25);
     height: 100%;
+    width: 0%;
+    -webkit-transition: width 2s; /* For Safari 3.1 to 6.0 */
+    transition: width 1s;
+    z-index: 100;
+}
+
+
+.animationHoverDivEngaged {
+    // background-color: rgb(0,0,0);
+    // height: 100%;
     width: 85%;
 }
